Wed Aug 18 13:12:29 2004  George Lebl <jirka@5z.com>

	* Release 2.6.0.4

Wed Aug 18 13:00:09 2004  George Lebl <jirka@5z.com>

	* daemon/slave.c: create .dmrc non group/world readable, though that's
	  probably just being overly anal.

Wed Aug 18 12:28:52 2004  George Lebl <jirka@5z.com>

	* gui/gdmsetup.c: Fix #143707 by using Exclude= as well for
	  the dropdown lists.

Wed Aug 18 12:15:39 2004  George Lebl <jirka@5z.com>

	* gui/gdmlanguages.c: Fix #150293 by adding localized name for
	  Bosnian.

Wed Aug 18 11:54:29 2004  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: don't resize the window after selection for
	  the amount of time it could take to double click, that way a
	  double click does not get lost.  Should fix some of the bugs,
	  but it seems they are mostly with the graphical greeter which is
	  not affected by this.

2004-08-16  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added nb to ALL_LINGUAS.

Wed Aug 11 03:45:00 2004  Brian Cameron  <brian.cameron@sun.com>

	* acconfig.h: Added HAVE_LOGINDEVPERM and HAVE_ADT
	* configure.in: Added checking for Solaris logindevperm and
	  auditing API's.
	* Add logic so gdm2 supports Solaris logindevperm and
	  auditing.

Tue Aug 10 08:53:32 2004  George Lebl <jirka@5z.com>

	* gui/gdmlanguages.c: I should learn how to spell Denmark

Tue Aug 03 16:42:04 2004  George Lebl <jirka@5z.com>

	* gui/gdmlanguages.c, config/locale.alias: add Armenian to
	  fix #139454

Tue Aug 03 16:29:08 2004  George Lebl <jirka@5z.com>

	* gui/gdmlanguages.c: "fix" #148349 by adding French (Belgium),
	  French (Switzerland), German (Austria), German (Switzerland)
	  to the translation matrix applying the patch.  Patch from
	  Christian Rose

	* config/locale.alias: add de_AT, de_CH, fr_BE, fr_CH

	* gui/gdmlanguages.c: normalize english names, patch mostly from
	  Christian Rose, #148350

	* gui/gdmlanguages.c: fix #148356 by including a native version of
	  Azerbaijani language name
