@@ -1,3 +1,9 @@
+Tue Aug 24 12:27:00 2004  Brian Cameron  <brian.cameron@sun.com>
+
+	* verify-pam.c: No longer call logindevperm if not logging into
+	  the console.  This corrects problems discovered by testing
+	  on Solaris.
+
 Wed Aug 18 13:12:29 2004  George Lebl <jirka@5z.com>
 
 	* Release 2.6.0.4
